complete  role menu dept api migrate
